syntax = "proto3";

option go_package = "github.com/lcnascimento/istio-knative-poc/audiences-service/application/grpc/proto";

package grpc;

import "google/protobuf/wrappers.proto";

service AudiencesServiceFrontend {
  rpc GetAudience(GetAudienceRequest) returns (GetAudienceResponse);
  rpc ListAudiences(ListAudiencesRequest) returns (ListAudiencesResponse);
  rpc EnqueueAudienceSending(EnqueueAudienceSendingRequest) returns (google.protobuf.BoolValue);
}

service AudiencesServiceWorker {
  rpc SendAudience(SendAudienceRequest) returns (google.protobuf.BoolValue);
}

message GetAudienceRequest {
  string audience_id = 1;
}

message GetAudienceResponse {
  Audience audience = 1;
}

message ListAudiencesRequest {
}

message ListAudiencesResponse {
  repeated Audience audiences = 1;
}

message EnqueueAudienceSendingRequest {
  string audience_id = 1;
}

message SendAudienceRequest {
  string audience_id = 1;
}

message Audience {
  string id             = 1;
  string app_key        = 2;
  string name           = 3;
  string segment_id     = 4;
  string last_export_id = 5;

  AudienceProvider provider = 6;
}

enum AudienceProvider {
  GOOGLE    = 0;
  FACEBOOK  = 1;
}
